# image_processing_for_cpp

./: README.md
.github/workflows/: cmake.yml
exercise1/: commands.sh  task1  task1.cpp
exercise2/: CMakeCache.txt  README.md  example  example.ii
exercise2/example/: a.out  example  example.bc  example.s
exercise2/example/example.dSYM/Contents/Resources/DWARF/: example
exercise2/example2/: CMakeLists.txt
exercise2/example2/src/: .CMakeLists.txt.swp  CMakeLists.txt  blah.cpp  blah.h  main.cpp  sq_root.cpp  sq_root.h  test.cpp
exercise2/example2/tests/: CMakeLists.txt  test_example.cpp
exercise2/igg_image/: .CMakeLists.txt.swp  CMakeLists.txt
exercise2/igg_image/src/igg_image/: .CMakeLists.txt.swp  .image.cpp.swp  .io_tools.h.swp  CMakeLists.txt  image.cpp  image.h  main.cpp
exercise2/igg_image/tests/: CMakeLists.txt  image_tests.cpp  test.cpp  tests_image.cpp
exercise2/inspect_ppm/: file  file.txt  file_handling.cpp  inspect.ipynb  main  main.cpp
exercise2/prac/: CMakeLists.txt  example.cpp
exercise2/test/: exercise  image.cpp  image.h  main.cpp
exercise3/igg_image/lib/: libstrategies.dylib
exercise3/igg_image/src/igg_image/: .CMakeLists.txt.swp  .image.cpp.swp  .image.h.swp  CMakeLists.txt  image.cpp  image.h
exercise3/igg_image/src/igg_image/io_strategies/: .png_strategy.cpp.swp  .ppm_strategy.cpp.swp  .strategy.h.swo  .strategy.h.swp  CMakeLists.txt  dummy_strategy.cpp  png_strategy.cpp  ppm_strategy.cpp  ppm_strategy.h  strategy.h
exercise3/igg_image/tests/: .CMakeLists.txt.swp  .test_from_png.cpp.swp  .test_init.cpp.swp  CMakeLists.txt  test_dummy_strategy.cpp  test_from_png.cpp  test_from_ppm.cpp  test_histogram.cpp  test_init.cpp  test_resize.cpp  tests_image.cpp
exercise3/igg_image/tests/data/: test_from_ppm_img_temp.ppm
google_test_/: CMakeLists.txt  README.md
google_test_/src/: CMakeLists.txt  main.cpp  print.cpp  print.h
google_test_/test/: CMakeLists.txt  testing.cpp
